# lender-matching-backend

./: .env  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  seed_parameters.py
backend/models/: __init__.py  lenders.py  loan_applications.py  match_results.py  parameter_definitions.py  policies.py  policy_rules.py
backend/routers/: __init__.py  applications.py  lenders.py  parameters.py  policies.py
backend/services/: __init__.py  gemini_service.py  ingestion_service.py  matching_service.py
backend/utils/: __init__.py  validators.py
frontend/: Dockerfile
frontend/src/: App.jsx
